# obnuitka

./: CHANGELOG.md  README.md  pyproject.toml
src/obnuitka/: __init__.py  formatter.py
